parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> document
Rule 1     document -> instructions
Rule 2     instructions -> instruction instructions
Rule 3     instructions -> instruction
Rule 4     instruction -> TITLE LPAREN arguments RPAREN LBRACE content RBRACE
Rule 5     instruction -> TITLE LPAREN RPAREN LBRACE content RBRACE
Rule 6     instruction -> SECTION LPAREN arguments RPAREN LBRACE content RBRACE
Rule 7     instruction -> SECTION LPAREN RPAREN LBRACE content RBRACE
Rule 8     instruction -> BOLD LPAREN RPAREN LBRACE bold_content RBRACE
Rule 9     instruction -> ITALIC LPAREN RPAREN LBRACE italic_content RBRACE
Rule 10    instruction -> UNDERLINED LPAREN RPAREN LBRACE underlined_content RBRACE
Rule 11    instruction -> STYLE LPAREN arguments RPAREN
Rule 12    instruction -> PAGE_NUMBER LPAREN arguments RPAREN
Rule 13    instruction -> NUMBERIZE_TITLE LPAREN arguments RPAREN
Rule 14    instruction -> NUMBERIZE_TITLE LPAREN RPAREN
Rule 15    arguments -> arguments COMMA argument
Rule 16    arguments -> argument
Rule 17    argument -> ARG_NAME EQUALS STRING
Rule 18    argument -> ARG_STYLE EQUALS STRING
Rule 19    argument -> ARG_FONT_SIZE EQUALS NUMBER
Rule 20    argument -> ARG_FONT EQUALS STRING
Rule 21    argument -> ARG_FONT_COLOR EQUALS STRING
Rule 22    argument -> ARG_LEVEL EQUALS NUMBER
Rule 23    argument -> ARG_PAGE_NUMBER_POSITION EQUALS STRING
Rule 24    argument -> ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
Rule 25    argument -> ARG_PAGE_NUMBER_FONT EQUALS STRING
Rule 26    argument -> ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
Rule 27    argument -> ARG_PAGE_NUMBER_START EQUALS NUMBER
Rule 28    argument -> ARG_NUMBERIZE_TITLE_START EQUALS NUMBER
Rule 29    content -> content TEXT
Rule 30    content -> TEXT
Rule 31    content -> content instruction
Rule 32    content -> instruction
Rule 33    bold_content -> TEXT
Rule 34    italic_content -> TEXT
Rule 35    underlined_content -> TEXT

Terminals, with rules where they appear

ARG_FONT             : 20
ARG_FONT_COLOR       : 21
ARG_FONT_SIZE        : 19
ARG_LEVEL            : 22
ARG_NAME             : 17
ARG_NUMBERIZE_TITLE_START : 28
ARG_PAGE_NUMBER_FONT : 25
ARG_PAGE_NUMBER_FONT_COLOR : 26
ARG_PAGE_NUMBER_FONT_SIZE : 24
ARG_PAGE_NUMBER_POSITION : 23
ARG_PAGE_NUMBER_START : 27
ARG_STYLE            : 18
BOLD                 : 8
COMMA                : 15
EQUALS               : 17 18 19 20 21 22 23 24 25 26 27 28
ITALIC               : 9
LBRACE               : 4 5 6 7 8 9 10
LPAREN               : 4 5 6 7 8 9 10 11 12 13 14
NUMBER               : 19 22 24 27 28
NUMBERIZE_TITLE      : 13 14
PAGE_NUMBER          : 12
RBRACE               : 4 5 6 7 8 9 10
RPAREN               : 4 5 6 7 8 9 10 11 12 13 14
SECTION              : 6 7
STRING               : 17 18 20 21 23 25 26
STYLE                : 11
TEXT                 : 29 30 33 34 35
TITLE                : 4 5
UNDERLINED           : 10
error                : 

Nonterminals, with rules where they appear

argument             : 15 16
arguments            : 4 6 11 12 13 15
bold_content         : 8
content              : 4 5 6 7 29 31
document             : 0
instruction          : 2 3 31 32
instructions         : 1 2
italic_content       : 9
underlined_content   : 10

Parsing method: LALR

state 0

    (0) S' -> . document
    (1) document -> . instructions
    (2) instructions -> . instruction instructions
    (3) instructions -> . instruction
    (4) instruction -> . TITLE LPAREN arguments RPAREN LBRACE content RBRACE
    (5) instruction -> . TITLE LPAREN RPAREN LBRACE content RBRACE
    (6) instruction -> . SECTION LPAREN arguments RPAREN LBRACE content RBRACE
    (7) instruction -> . SECTION LPAREN RPAREN LBRACE content RBRACE
    (8) instruction -> . BOLD LPAREN RPAREN LBRACE bold_content RBRACE
    (9) instruction -> . ITALIC LPAREN RPAREN LBRACE italic_content RBRACE
    (10) instruction -> . UNDERLINED LPAREN RPAREN LBRACE underlined_content RBRACE
    (11) instruction -> . STYLE LPAREN arguments RPAREN
    (12) instruction -> . PAGE_NUMBER LPAREN arguments RPAREN
    (13) instruction -> . NUMBERIZE_TITLE LPAREN arguments RPAREN
    (14) instruction -> . NUMBERIZE_TITLE LPAREN RPAREN

    TITLE           shift and go to state 4
    SECTION         shift and go to state 5
    BOLD            shift and go to state 6
    ITALIC          shift and go to state 7
    UNDERLINED      shift and go to state 8
    STYLE           shift and go to state 9
    PAGE_NUMBER     shift and go to state 10
    NUMBERIZE_TITLE shift and go to state 11

    document                       shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3

state 1

    (0) S' -> document .



state 2

    (1) document -> instructions .

    $end            reduce using rule 1 (document -> instructions .)


state 3

    (2) instructions -> instruction . instructions
    (3) instructions -> instruction .
    (2) instructions -> . instruction instructions
    (3) instructions -> . instruction
    (4) instruction -> . TITLE LPAREN arguments RPAREN LBRACE content RBRACE
    (5) instruction -> . TITLE LPAREN RPAREN LBRACE content RBRACE
    (6) instruction -> . SECTION LPAREN arguments RPAREN LBRACE content RBRACE
    (7) instruction -> . SECTION LPAREN RPAREN LBRACE content RBRACE
    (8) instruction -> . BOLD LPAREN RPAREN LBRACE bold_content RBRACE
    (9) instruction -> . ITALIC LPAREN RPAREN LBRACE italic_content RBRACE
    (10) instruction -> . UNDERLINED LPAREN RPAREN LBRACE underlined_content RBRACE
    (11) instruction -> . STYLE LPAREN arguments RPAREN
    (12) instruction -> . PAGE_NUMBER LPAREN arguments RPAREN
    (13) instruction -> . NUMBERIZE_TITLE LPAREN arguments RPAREN
    (14) instruction -> . NUMBERIZE_TITLE LPAREN RPAREN

    $end            reduce using rule 3 (instructions -> instruction .)
    TITLE           shift and go to state 4
    SECTION         shift and go to state 5
    BOLD            shift and go to state 6
    ITALIC          shift and go to state 7
    UNDERLINED      shift and go to state 8
    STYLE           shift and go to state 9
    PAGE_NUMBER     shift and go to state 10
    NUMBERIZE_TITLE shift and go to state 11

    instruction                    shift and go to state 3
    instructions                   shift and go to state 12

state 4

    (4) instruction -> TITLE . LPAREN arguments RPAREN LBRACE content RBRACE
    (5) instruction -> TITLE . LPAREN RPAREN LBRACE content RBRACE

    LPAREN          shift and go to state 13


state 5

    (6) instruction -> SECTION . LPAREN arguments RPAREN LBRACE content RBRACE
    (7) instruction -> SECTION . LPAREN RPAREN LBRACE content RBRACE

    LPAREN          shift and go to state 14


state 6

    (8) instruction -> BOLD . LPAREN RPAREN LBRACE bold_content RBRACE

    LPAREN          shift and go to state 15


state 7

    (9) instruction -> ITALIC . LPAREN RPAREN LBRACE italic_content RBRACE

    LPAREN          shift and go to state 16


state 8

    (10) instruction -> UNDERLINED . LPAREN RPAREN LBRACE underlined_content RBRACE

    LPAREN          shift and go to state 17


state 9

    (11) instruction -> STYLE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 18


state 10

    (12) instruction -> PAGE_NUMBER . LPAREN arguments RPAREN

    LPAREN          shift and go to state 19


state 11

    (13) instruction -> NUMBERIZE_TITLE . LPAREN arguments RPAREN
    (14) instruction -> NUMBERIZE_TITLE . LPAREN RPAREN

    LPAREN          shift and go to state 20


state 12

    (2) instructions -> instruction instructions .

    $end            reduce using rule 2 (instructions -> instruction instructions .)


state 13

    (4) instruction -> TITLE LPAREN . arguments RPAREN LBRACE content RBRACE
    (5) instruction -> TITLE LPAREN . RPAREN LBRACE content RBRACE
    (15) arguments -> . arguments COMMA argument
    (16) arguments -> . argument
    (17) argument -> . ARG_NAME EQUALS STRING
    (18) argument -> . ARG_STYLE EQUALS STRING
    (19) argument -> . ARG_FONT_SIZE EQUALS NUMBER
    (20) argument -> . ARG_FONT EQUALS STRING
    (21) argument -> . ARG_FONT_COLOR EQUALS STRING
    (22) argument -> . ARG_LEVEL EQUALS NUMBER
    (23) argument -> . ARG_PAGE_NUMBER_POSITION EQUALS STRING
    (24) argument -> . ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
    (25) argument -> . ARG_PAGE_NUMBER_FONT EQUALS STRING
    (26) argument -> . ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
    (27) argument -> . ARG_PAGE_NUMBER_START EQUALS NUMBER
    (28) argument -> . ARG_NUMBERIZE_TITLE_START EQUALS NUMBER

    RPAREN          shift and go to state 22
    ARG_NAME        shift and go to state 24
    ARG_STYLE       shift and go to state 25
    ARG_FONT_SIZE   shift and go to state 26
    ARG_FONT        shift and go to state 27
    ARG_FONT_COLOR  shift and go to state 28
    ARG_LEVEL       shift and go to state 29
    ARG_PAGE_NUMBER_POSITION shift and go to state 30
    ARG_PAGE_NUMBER_FONT_SIZE shift and go to state 31
    ARG_PAGE_NUMBER_FONT shift and go to state 32
    ARG_PAGE_NUMBER_FONT_COLOR shift and go to state 33
    ARG_PAGE_NUMBER_START shift and go to state 34
    ARG_NUMBERIZE_TITLE_START shift and go to state 35

    arguments                      shift and go to state 21
    argument                       shift and go to state 23

state 14

    (6) instruction -> SECTION LPAREN . arguments RPAREN LBRACE content RBRACE
    (7) instruction -> SECTION LPAREN . RPAREN LBRACE content RBRACE
    (15) arguments -> . arguments COMMA argument
    (16) arguments -> . argument
    (17) argument -> . ARG_NAME EQUALS STRING
    (18) argument -> . ARG_STYLE EQUALS STRING
    (19) argument -> . ARG_FONT_SIZE EQUALS NUMBER
    (20) argument -> . ARG_FONT EQUALS STRING
    (21) argument -> . ARG_FONT_COLOR EQUALS STRING
    (22) argument -> . ARG_LEVEL EQUALS NUMBER
    (23) argument -> . ARG_PAGE_NUMBER_POSITION EQUALS STRING
    (24) argument -> . ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
    (25) argument -> . ARG_PAGE_NUMBER_FONT EQUALS STRING
    (26) argument -> . ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
    (27) argument -> . ARG_PAGE_NUMBER_START EQUALS NUMBER
    (28) argument -> . ARG_NUMBERIZE_TITLE_START EQUALS NUMBER

    RPAREN          shift and go to state 37
    ARG_NAME        shift and go to state 24
    ARG_STYLE       shift and go to state 25
    ARG_FONT_SIZE   shift and go to state 26
    ARG_FONT        shift and go to state 27
    ARG_FONT_COLOR  shift and go to state 28
    ARG_LEVEL       shift and go to state 29
    ARG_PAGE_NUMBER_POSITION shift and go to state 30
    ARG_PAGE_NUMBER_FONT_SIZE shift and go to state 31
    ARG_PAGE_NUMBER_FONT shift and go to state 32
    ARG_PAGE_NUMBER_FONT_COLOR shift and go to state 33
    ARG_PAGE_NUMBER_START shift and go to state 34
    ARG_NUMBERIZE_TITLE_START shift and go to state 35

    arguments                      shift and go to state 36
    argument                       shift and go to state 23

state 15

    (8) instruction -> BOLD LPAREN . RPAREN LBRACE bold_content RBRACE

    RPAREN          shift and go to state 38


state 16

    (9) instruction -> ITALIC LPAREN . RPAREN LBRACE italic_content RBRACE

    RPAREN          shift and go to state 39


state 17

    (10) instruction -> UNDERLINED LPAREN . RPAREN LBRACE underlined_content RBRACE

    RPAREN          shift and go to state 40


state 18

    (11) instruction -> STYLE LPAREN . arguments RPAREN
    (15) arguments -> . arguments COMMA argument
    (16) arguments -> . argument
    (17) argument -> . ARG_NAME EQUALS STRING
    (18) argument -> . ARG_STYLE EQUALS STRING
    (19) argument -> . ARG_FONT_SIZE EQUALS NUMBER
    (20) argument -> . ARG_FONT EQUALS STRING
    (21) argument -> . ARG_FONT_COLOR EQUALS STRING
    (22) argument -> . ARG_LEVEL EQUALS NUMBER
    (23) argument -> . ARG_PAGE_NUMBER_POSITION EQUALS STRING
    (24) argument -> . ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
    (25) argument -> . ARG_PAGE_NUMBER_FONT EQUALS STRING
    (26) argument -> . ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
    (27) argument -> . ARG_PAGE_NUMBER_START EQUALS NUMBER
    (28) argument -> . ARG_NUMBERIZE_TITLE_START EQUALS NUMBER

    ARG_NAME        shift and go to state 24
    ARG_STYLE       shift and go to state 25
    ARG_FONT_SIZE   shift and go to state 26
    ARG_FONT        shift and go to state 27
    ARG_FONT_COLOR  shift and go to state 28
    ARG_LEVEL       shift and go to state 29
    ARG_PAGE_NUMBER_POSITION shift and go to state 30
    ARG_PAGE_NUMBER_FONT_SIZE shift and go to state 31
    ARG_PAGE_NUMBER_FONT shift and go to state 32
    ARG_PAGE_NUMBER_FONT_COLOR shift and go to state 33
    ARG_PAGE_NUMBER_START shift and go to state 34
    ARG_NUMBERIZE_TITLE_START shift and go to state 35

    arguments                      shift and go to state 41
    argument                       shift and go to state 23

state 19

    (12) instruction -> PAGE_NUMBER LPAREN . arguments RPAREN
    (15) arguments -> . arguments COMMA argument
    (16) arguments -> . argument
    (17) argument -> . ARG_NAME EQUALS STRING
    (18) argument -> . ARG_STYLE EQUALS STRING
    (19) argument -> . ARG_FONT_SIZE EQUALS NUMBER
    (20) argument -> . ARG_FONT EQUALS STRING
    (21) argument -> . ARG_FONT_COLOR EQUALS STRING
    (22) argument -> . ARG_LEVEL EQUALS NUMBER
    (23) argument -> . ARG_PAGE_NUMBER_POSITION EQUALS STRING
    (24) argument -> . ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
    (25) argument -> . ARG_PAGE_NUMBER_FONT EQUALS STRING
    (26) argument -> . ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
    (27) argument -> . ARG_PAGE_NUMBER_START EQUALS NUMBER
    (28) argument -> . ARG_NUMBERIZE_TITLE_START EQUALS NUMBER

    ARG_NAME        shift and go to state 24
    ARG_STYLE       shift and go to state 25
    ARG_FONT_SIZE   shift and go to state 26
    ARG_FONT        shift and go to state 27
    ARG_FONT_COLOR  shift and go to state 28
    ARG_LEVEL       shift and go to state 29
    ARG_PAGE_NUMBER_POSITION shift and go to state 30
    ARG_PAGE_NUMBER_FONT_SIZE shift and go to state 31
    ARG_PAGE_NUMBER_FONT shift and go to state 32
    ARG_PAGE_NUMBER_FONT_COLOR shift and go to state 33
    ARG_PAGE_NUMBER_START shift and go to state 34
    ARG_NUMBERIZE_TITLE_START shift and go to state 35

    arguments                      shift and go to state 42
    argument                       shift and go to state 23

state 20

    (13) instruction -> NUMBERIZE_TITLE LPAREN . arguments RPAREN
    (14) instruction -> NUMBERIZE_TITLE LPAREN . RPAREN
    (15) arguments -> . arguments COMMA argument
    (16) arguments -> . argument
    (17) argument -> . ARG_NAME EQUALS STRING
    (18) argument -> . ARG_STYLE EQUALS STRING
    (19) argument -> . ARG_FONT_SIZE EQUALS NUMBER
    (20) argument -> . ARG_FONT EQUALS STRING
    (21) argument -> . ARG_FONT_COLOR EQUALS STRING
    (22) argument -> . ARG_LEVEL EQUALS NUMBER
    (23) argument -> . ARG_PAGE_NUMBER_POSITION EQUALS STRING
    (24) argument -> . ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
    (25) argument -> . ARG_PAGE_NUMBER_FONT EQUALS STRING
    (26) argument -> . ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
    (27) argument -> . ARG_PAGE_NUMBER_START EQUALS NUMBER
    (28) argument -> . ARG_NUMBERIZE_TITLE_START EQUALS NUMBER

    RPAREN          shift and go to state 44
    ARG_NAME        shift and go to state 24
    ARG_STYLE       shift and go to state 25
    ARG_FONT_SIZE   shift and go to state 26
    ARG_FONT        shift and go to state 27
    ARG_FONT_COLOR  shift and go to state 28
    ARG_LEVEL       shift and go to state 29
    ARG_PAGE_NUMBER_POSITION shift and go to state 30
    ARG_PAGE_NUMBER_FONT_SIZE shift and go to state 31
    ARG_PAGE_NUMBER_FONT shift and go to state 32
    ARG_PAGE_NUMBER_FONT_COLOR shift and go to state 33
    ARG_PAGE_NUMBER_START shift and go to state 34
    ARG_NUMBERIZE_TITLE_START shift and go to state 35

    arguments                      shift and go to state 43
    argument                       shift and go to state 23

state 21

    (4) instruction -> TITLE LPAREN arguments . RPAREN LBRACE content RBRACE
    (15) arguments -> arguments . COMMA argument

    RPAREN          shift and go to state 45
    COMMA           shift and go to state 46


state 22

    (5) instruction -> TITLE LPAREN RPAREN . LBRACE content RBRACE

    LBRACE          shift and go to state 47


state 23

    (16) arguments -> argument .

    RPAREN          reduce using rule 16 (arguments -> argument .)
    COMMA           reduce using rule 16 (arguments -> argument .)


state 24

    (17) argument -> ARG_NAME . EQUALS STRING

    EQUALS          shift and go to state 48


state 25

    (18) argument -> ARG_STYLE . EQUALS STRING

    EQUALS          shift and go to state 49


state 26

    (19) argument -> ARG_FONT_SIZE . EQUALS NUMBER

    EQUALS          shift and go to state 50


state 27

    (20) argument -> ARG_FONT . EQUALS STRING

    EQUALS          shift and go to state 51


state 28

    (21) argument -> ARG_FONT_COLOR . EQUALS STRING

    EQUALS          shift and go to state 52


state 29

    (22) argument -> ARG_LEVEL . EQUALS NUMBER

    EQUALS          shift and go to state 53


state 30

    (23) argument -> ARG_PAGE_NUMBER_POSITION . EQUALS STRING

    EQUALS          shift and go to state 54


state 31

    (24) argument -> ARG_PAGE_NUMBER_FONT_SIZE . EQUALS NUMBER

    EQUALS          shift and go to state 55


state 32

    (25) argument -> ARG_PAGE_NUMBER_FONT . EQUALS STRING

    EQUALS          shift and go to state 56


state 33

    (26) argument -> ARG_PAGE_NUMBER_FONT_COLOR . EQUALS STRING

    EQUALS          shift and go to state 57


state 34

    (27) argument -> ARG_PAGE_NUMBER_START . EQUALS NUMBER

    EQUALS          shift and go to state 58


state 35

    (28) argument -> ARG_NUMBERIZE_TITLE_START . EQUALS NUMBER

    EQUALS          shift and go to state 59


state 36

    (6) instruction -> SECTION LPAREN arguments . RPAREN LBRACE content RBRACE
    (15) arguments -> arguments . COMMA argument

    RPAREN          shift and go to state 60
    COMMA           shift and go to state 46


state 37

    (7) instruction -> SECTION LPAREN RPAREN . LBRACE content RBRACE

    LBRACE          shift and go to state 61


state 38

    (8) instruction -> BOLD LPAREN RPAREN . LBRACE bold_content RBRACE

    LBRACE          shift and go to state 62


state 39

    (9) instruction -> ITALIC LPAREN RPAREN . LBRACE italic_content RBRACE

    LBRACE          shift and go to state 63


state 40

    (10) instruction -> UNDERLINED LPAREN RPAREN . LBRACE underlined_content RBRACE

    LBRACE          shift and go to state 64


state 41

    (11) instruction -> STYLE LPAREN arguments . RPAREN
    (15) arguments -> arguments . COMMA argument

    RPAREN          shift and go to state 65
    COMMA           shift and go to state 46


state 42

    (12) instruction -> PAGE_NUMBER LPAREN arguments . RPAREN
    (15) arguments -> arguments . COMMA argument

    RPAREN          shift and go to state 66
    COMMA           shift and go to state 46


state 43

    (13) instruction -> NUMBERIZE_TITLE LPAREN arguments . RPAREN
    (15) arguments -> arguments . COMMA argument

    RPAREN          shift and go to state 67
    COMMA           shift and go to state 46


state 44

    (14) instruction -> NUMBERIZE_TITLE LPAREN RPAREN .

    TITLE           reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    SECTION         reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    BOLD            reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    ITALIC          reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    UNDERLINED      reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    STYLE           reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    PAGE_NUMBER     reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    NUMBERIZE_TITLE reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    $end            reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    RBRACE          reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)
    TEXT            reduce using rule 14 (instruction -> NUMBERIZE_TITLE LPAREN RPAREN .)


state 45

    (4) instruction -> TITLE LPAREN arguments RPAREN . LBRACE content RBRACE

    LBRACE          shift and go to state 68


state 46

    (15) arguments -> arguments COMMA . argument
    (17) argument -> . ARG_NAME EQUALS STRING
    (18) argument -> . ARG_STYLE EQUALS STRING
    (19) argument -> . ARG_FONT_SIZE EQUALS NUMBER
    (20) argument -> . ARG_FONT EQUALS STRING
    (21) argument -> . ARG_FONT_COLOR EQUALS STRING
    (22) argument -> . ARG_LEVEL EQUALS NUMBER
    (23) argument -> . ARG_PAGE_NUMBER_POSITION EQUALS STRING
    (24) argument -> . ARG_PAGE_NUMBER_FONT_SIZE EQUALS NUMBER
    (25) argument -> . ARG_PAGE_NUMBER_FONT EQUALS STRING
    (26) argument -> . ARG_PAGE_NUMBER_FONT_COLOR EQUALS STRING
    (27) argument -> . ARG_PAGE_NUMBER_START EQUALS NUMBER
    (28) argument -> . ARG_NUMBERIZE_TITLE_START EQUALS NUMBER

    ARG_NAME        shift and go to state 24
    ARG_STYLE       shift and go to state 25
    ARG_FONT_SIZE   shift and go to state 26
    ARG_FONT        shift and go to state 27
    ARG_FONT_COLOR  shift and go to state 28
    ARG_LEVEL       shift and go to state 29
    ARG_PAGE_NUMBER_POSITION shift and go to state 30
    ARG_PAGE_NUMBER_FONT_SIZE shift and go to state 31
    ARG_PAGE_NUMBER_FONT shift and go to state 32
    ARG_PAGE_NUMBER_FONT_COLOR shift and go to state 33
    ARG_PAGE_NUMBER_START shift and go to state 34
    ARG_NUMBERIZE_TITLE_START shift and go to state 35

    argument                       shift and go to state 69

state 47

    (5) instruction -> TITLE LPAREN RPAREN LBRACE . content RBRACE
    (29) content -> . content TEXT
    (30) content -> . TEXT
    (31) content -> . content instruction
    (32) content -> . instruction
    (4) instruction -> . TITLE LPAREN arguments RPAREN LBRACE content RBRACE
    (5) instruction -> . TITLE LPAREN RPAREN LBRACE content RBRACE
    (6) instruction -> . SECTION LPAREN arguments RPAREN LBRACE content RBRACE
    (7) instruction -> . SECTION LPAREN RPAREN LBRACE content RBRACE
    (8) instruction -> . BOLD LPAREN RPAREN LBRACE bold_content RBRACE
    (9) instruction -> . ITALIC LPAREN RPAREN LBRACE italic_content RBRACE
    (10) instruction -> . UNDERLINED LPAREN RPAREN LBRACE underlined_content RBRACE
    (11) instruction -> . STYLE LPAREN arguments RPAREN
    (12) instruction -> . PAGE_NUMBER LPAREN arguments RPAREN
    (13) instruction -> . NUMBERIZE_TITLE LPAREN arguments RPAREN
    (14) instruction -> . NUMBERIZE_TITLE LPAREN RPAREN

    TEXT            shift and go to state 71
    TITLE           shift and go to state 4
    SECTION         shift and go to state 5
    BOLD            shift and go to state 6
    ITALIC          shift and go to state 7
    UNDERLINED      shift and go to state 8
    STYLE           shift and go to state 9
    PAGE_NUMBER     shift and go to state 10
    NUMBERIZE_TITLE shift and go to state 11

    content                        shift and go to state 70
    instruction                    shift and go to state 72

state 48

    (17) argument -> ARG_NAME EQUALS . STRING

    STRING          shift and go to state 73


state 49

    (18) argument -> ARG_STYLE EQUALS . STRING

    STRING          shift and go to state 74


state 50

    (19) argument -> ARG_FONT_SIZE EQUALS . NUMBER

    NUMBER          shift and go to state 75


state 51

    (20) argument -> ARG_FONT EQUALS . STRING

    STRING          shift and go to state 76


state 52

    (21) argument -> ARG_FONT_COLOR EQUALS . STRING

    STRING          shift and go to state 77


state 53

    (22) argument -> ARG_LEVEL EQUALS . NUMBER

    NUMBER          shift and go to state 78


state 54

    (23) argument -> ARG_PAGE_NUMBER_POSITION EQUALS . STRING

    STRING          shift and go to state 79


state 55

    (24) argument -> ARG_PAGE_NUMBER_FONT_SIZE EQUALS . NUMBER

    NUMBER          shift and go to state 80


state 56

    (25) argument -> ARG_PAGE_NUMBER_FONT EQUALS . STRING

    STRING          shift and go to state 81


state 57

    (26) argument -> ARG_PAGE_NUMBER_FONT_COLOR EQUALS . STRING

    STRING          shift and go to state 82


state 58

    (27) argument -> ARG_PAGE_NUMBER_START EQUALS . NUMBER

    NUMBER          shift and go to state 83


state 59

    (28) argument -> ARG_NUMBERIZE_TITLE_START EQUALS . NUMBER

    NUMBER          shift and go to state 84


state 60

    (6) instruction -> SECTION LPAREN arguments RPAREN . LBRACE content RBRACE

    LBRACE          shift and go to state 85


state 61

    (7) instruction -> SECTION LPAREN RPAREN LBRACE . content RBRACE
    (29) content -> . content TEXT
    (30) content -> . TEXT
    (31) content -> . content instruction
    (32) content -> . instruction
    (4) instruction -> . TITLE LPAREN arguments RPAREN LBRACE content RBRACE
    (5) instruction -> . TITLE LPAREN RPAREN LBRACE content RBRACE
    (6) instruction -> . SECTION LPAREN arguments RPAREN LBRACE content RBRACE
    (7) instruction -> . SECTION LPAREN RPAREN LBRACE content RBRACE
    (8) instruction -> . BOLD LPAREN RPAREN LBRACE bold_content RBRACE
    (9) instruction -> . ITALIC LPAREN RPAREN LBRACE italic_content RBRACE
    (10) instruction -> . UNDERLINED LPAREN RPAREN LBRACE underlined_content RBRACE
    (11) instruction -> . STYLE LPAREN arguments RPAREN
    (12) instruction -> . PAGE_NUMBER LPAREN arguments RPAREN
    (13) instruction -> . NUMBERIZE_TITLE LPAREN arguments RPAREN
    (14) instruction -> . NUMBERIZE_TITLE LPAREN RPAREN

    TEXT            shift and go to state 71
    TITLE           shift and go to state 4
    SECTION         shift and go to state 5
    BOLD            shift and go to state 6
    ITALIC          shift and go to state 7
    UNDERLINED      shift and go to state 8
    STYLE           shift and go to state 9
    PAGE_NUMBER     shift and go to state 10
    NUMBERIZE_TITLE shift and go to state 11

    content                        shift and go to state 86
    instruction                    shift and go to state 72

state 62

    (8) instruction -> BOLD LPAREN RPAREN LBRACE . bold_content RBRACE
    (33) bold_content -> . TEXT

    TEXT            shift and go to state 88

    bold_content                   shift and go to state 87

state 63

    (9) instruction -> ITALIC LPAREN RPAREN LBRACE . italic_content RBRACE
    (34) italic_content -> . TEXT

    TEXT            shift and go to state 90

    italic_content                 shift and go to state 89

state 64

    (10) instruction -> UNDERLINED LPAREN RPAREN LBRACE . underlined_content RBRACE
    (35) underlined_content -> . TEXT

    TEXT            shift and go to state 92
